tests/conformance/snapshots/conformance__conformance__raptorq_proof_correctness__vector_1_successful_decode_k8_complete.snap
---
source: tests/conformance/raptorq_proof_correctness.rs
assertion_line: 345
expression: scrubbed
---
{
  "config": {
    "h": 10,
    "k": 8,
    "l": 27,
    "object_id": "[deterministic]",
    "s": 7,
    "sbn": 0,
    "seed": "[deterministic]",
    "symbol_size": 32
  },
  "content_hash": "0xb4accab16ed8781d34ec2c64d2e56721b260f5c753f56beee5b9356b93a8b68c",
  "elimination": {
    "inactivated": 27,
    "inactive_cols_preview": [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26
    ],
    "inactive_cols_truncated": false,
    "pivot_events_preview": [
      {
        "col": 26,
        "row": 16
      },
      {
        "col": 17,
        "row": 0
      },
      {
        "col": 19,
        "row": 1
      },
      {
        "col": 18,
        "row": 2
      },
      {
        "col": 22,
        "row": 4
      },
      {
        "col": 23,
        "row": 5
      },
      {
        "col": 25,
        "row": 15
      },
      {
        "col": 20,
        "row": 3
      },
      {
        "col": 24,
        "row": 6
      },
      {
        "col": 21,
        "row": 7
      },
      {
        "col": 0,
        "row": 8
      },
      {
        "col": 10,
        "row": 9
      },
      {
        "col": 11,
        "row": 10
      },
      {
        "col": 12,
        "row": 11
      },
      {
        "col": 3,
        "row": 13
      },
      {
        "col": 15,
        "row": 12
      },
      {
        "col": 16,
        "row": 14
      },
      {
        "col": 1,
        "row": 17
      },
      {
        "col": 5,
        "row": 18
      },
      {
        "col": 13,
        "row": 19
      },
      {
        "col": 14,
        "row": 20
      },
      {
        "col": 4,
        "row": 21
      },
      {
        "col": 8,
        "row": 22
      },
      {
        "col": 9,
        "row": 23
      },
      {
        "col": 6,
        "row": 24
      },
      {
        "col": 7,
        "row": 25
      },
      {
        "col": 2,
        "row": 26
      }
    ],
    "pivot_events_truncated": false,
    "pivots": 27,
    "row_ops": 848,
    "strategy": "AllAtOnce",
    "strategy_transitions": [],
    "strategy_transitions_truncated": false
  },
  "outcome": {
    "kind": "Success",
    "source_payload_hash": "0xc19de0a1de81502c",
    "symbols_recovered": 8
  },
  "peeling": {
    "solved": 0,
    "solved_indices_preview": [],
    "truncated": false
  },
  "received": {
    "esi_multiset_hash": "0xdeb458a1a2555806",
    "esis_preview": [
      0,
      0,
      1,
      1,
      2,
      2,
      3,
      3,
      4,
      4,
      5,
      5,
      6,
      6,
      7,
      7,
      8,
      8,
      9,
      9,
      10,
      10,
      11,
      11,
      12,
      12,
      13,
      13,
      14,
      14,
      15,
      15,
      16,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26
    ],
    "repair_count": 36,
    "source_count": 8,
    "total": 44,
    "truncated": false
  },
  "test_vector": "successful_k8_complete",
  "version": 2
}
