tests/conformance/snapshots/conformance__conformance__raptorq_proof_correctness__vector_5_minimal_k4_edge_case.snap
---
source: tests/conformance/raptorq_proof_correctness.rs
assertion_line: 470
expression: scrubbed
---
{
  "config": {
    "h": 10,
    "k": 4,
    "l": 27,
    "object_id": "[deterministic]",
    "s": 7,
    "sbn": 0,
    "seed": "[deterministic]",
    "symbol_size": 16
  },
  "content_hash": "0x6f09190ba2cd9cadc7ea44c6cac0c79bbd06c2c5f1d61352a789a37d54e11add",
  "elimination": {
    "inactivated": 27,
    "inactive_cols_preview": [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26
    ],
    "inactive_cols_truncated": false,
    "pivot_events_preview": [
      {
        "col": 26,
        "row": 16
      },
      {
        "col": 17,
        "row": 0
      },
      {
        "col": 18,
        "row": 1
      },
      {
        "col": 19,
        "row": 2
      },
      {
        "col": 22,
        "row": 4
      },
      {
        "col": 25,
        "row": 15
      },
      {
        "col": 20,
        "row": 3
      },
      {
        "col": 23,
        "row": 5
      },
      {
        "col": 21,
        "row": 6
      },
      {
        "col": 24,
        "row": 7
      },
      {
        "col": 0,
        "row": 8
      },
      {
        "col": 10,
        "row": 9
      },
      {
        "col": 11,
        "row": 10
      },
      {
        "col": 12,
        "row": 11
      },
      {
        "col": 3,
        "row": 13
      },
      {
        "col": 5,
        "row": 12
      },
      {
        "col": 16,
        "row": 14
      },
      {
        "col": 1,
        "row": 17
      },
      {
        "col": 4,
        "row": 18
      },
      {
        "col": 14,
        "row": 19
      },
      {
        "col": 15,
        "row": 20
      },
      {
        "col": 8,
        "row": 21
      },
      {
        "col": 13,
        "row": 22
      },
      {
        "col": 6,
        "row": 23
      },
      {
        "col": 7,
        "row": 24
      },
      {
        "col": 9,
        "row": 25
      },
      {
        "col": 2,
        "row": 26
      }
    ],
    "pivot_events_truncated": false,
    "pivots": 27,
    "row_ops": 934,
    "strategy": "AllAtOnce",
    "strategy_transitions": [],
    "strategy_transitions_truncated": false
  },
  "outcome": {
    "kind": "Success",
    "source_payload_hash": "0x331c49e87daf92ef",
    "symbols_recovered": 4
  },
  "peeling": {
    "solved": 0,
    "solved_indices_preview": [],
    "truncated": false
  },
  "received": {
    "esi_multiset_hash": "0x25e6bc85bc46c6e8",
    "esis_preview": [
      0,
      0,
      1,
      1,
      2,
      2,
      3,
      3,
      4,
      4,
      5,
      5,
      6,
      6,
      7,
      7,
      8,
      8,
      9,
      9,
      10,
      10,
      11,
      11,
      12,
      12,
      13,
      13,
      14,
      14,
      15,
      15,
      16,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26
    ],
    "repair_count": 40,
    "source_count": 4,
    "total": 44,
    "truncated": false
  },
  "test_vector": "minimal_k4_complete",
  "version": 2
}
